# pyrobot_minimal

./: .gitignore  .pyrobot.rosinstall  README.md  install.md  install_base.sh  install_locobot.sh  install_locosim.sh  install_python.sh  requirements_python3.txt
robots/LoCoBot/locobot_bringup/: CMakeLists.txt  package.xml
robots/LoCoBot/locobot_bringup/launch/: launch_mapping.launch  lidar.launch  locobot_bringup.launch
robots/LoCoBot/locobot_control/: CMakeLists.txt
robots/LoCoBot/locobot_control/launch/: dynamixel_controllers.launch  main.launch
robots/LoCoBot/locobot_control/src/: locobot_controller.cpp
robots/LoCoBot/locobot_description/: manual_update.bash
robots/LoCoBot/locobot_description/launch/: display.launch
robots/LoCoBot/locobot_gazebo/: CMakeLists.txt  package.xml
robots/LoCoBot/locobot_navigation/: CMakeLists.txt  package.xml
robots/LoCoBot/locobot_navigation/config/: base_local_planner_params.yaml  common_costmap_params.yaml  common_costmap_params_teb.yaml  global_costmap_params.yaml  global_costmap_params_teb.yaml  global_planner_params.yaml  lidar_ignore_calibrated.npy  local_costmap_params_teb.yaml  move_base_rb_params.yaml
robots/LoCoBot/locobot_navigation/launch/: launch_mapping.launch  lidar.launch  locobot_gpf_pg_laser_controller.launch  sim_lidar.launch
robots/LoCoBot/locobot_navigation/nodes/: depth_image_to_laserscan.py  republish_scan.py
robots/LoCoBot/locobot_navigation/scripts/: find_lidar_dead_points.py  lidar_ignore.npy  scan_variances.npy
robots/LoCoBot/locobot_navigation/urdf/: box.urdf.xacro
(+5 files in other folders)
