<?xml version="1.0"?>
<package>
  <name>locobot_bringup</name>
  <version>0.0.1</version>
  <description>locobot launching scripts</description>

  <maintainer email="jpeng303@gatech.edu">Jing-Chen Peng</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>slam_toolbox</run_depend>
</package>
